Fix 7 Sonar issues introduced by the coverage-gap tests
HandlerKindsTest — 5 × S1186 (empty methods) + 1 × S1144 (unused
private). The fixture methods are reflection targets invoked via
Class.getDeclaredMethod(...), not called directly, so Sonar's
unused-private and empty-method detectors don't see the usages.
Added a header comment explaining the pattern plus per-method
@SuppressWarnings({"java:S1186", "java:S1144"}) with an inline
nested comment marking each as a reflection target.

McpMetadataCustomizersTest — 1 × S5853. Chained three
assertThat(claims).containsEntry(...) calls into one fluent chain.

mvn verify green.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>